# aether-flux

./: .gitignore  .prettierignore  .prettierrc  .stylelintignore  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-workspace.yaml  stylelint.config.ts  svelte.config.ts  tailwind.config.ts  vite.config.ts
src/: app.html  hooks.server.ts  hooks.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.json  zh.json
src-tauri/src/: app_shell.rs  lib.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/audio/asr/: loader.rs  mod.rs  processor.rs  qwen3_asr.rs  sense_voice_small.rs  sensevoice_small.rs  utils.rs  wordbank.rs
src-tauri/src/audio/recorder/: device.rs  encoding.rs  mod.rs  record.rs  stream.rs  types.rs
src-tauri/src/settings/: mod.rs  service.rs
src-tauri/src/utils/: app_shell.rs  backend_i18n.rs  mod.rs
src/lib/components/: FloatingActionButton.svelte  GlobalModalDialog.svelte  ThemeCard.svelte  WindowControl.svelte
src/lib/components/app/: TauriSettingsSync.svelte
src/lib/components/asr/: AsrSettingsTab.svelte  AsrTab.svelte  WordBankTab.svelte
src/lib/components/dialogs/: GlobalModalDialog.svelte  PageDialog.svelte
src/lib/components/selectors/: FontSelector.svelte  FontZoomSelector.svelte  LanguageSelector.svelte  ThemeSelector.svelte
src/lib/components/widgets/: MicRecorder.svelte  MicrophoneTest.svelte  ThemeCard.svelte  WindowControl.svelte
src/lib/i18n/messages/: en.json  zh.json
src/lib/i18n/project.inlang/: settings.json
src/lib/icons/: AlwaysOnTop.svelte  CloseIcon.svelte  MaximizeIcon.svelte  MinimizeIcon.svelte
src/lib/icons/tools/: AsrIcon.svelte  RecorderIcon.svelte
src/lib/icons/window/: AlwaysOnTop.svelte  CloseIcon.svelte  MaximizeIcon.svelte  MinimizeIcon.svelte
src/lib/layouts/: Default.svelte  index.ts
src/lib/router/: index.ts
src/lib/routers/: index.ts
src/lib/stores/: modal.ts  settings.ts  stores.ts
src/lib/tabs/: index.ts
src/lib/utils/: asrShortcut.ts  router.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts  layout.css  tabs.meta.ts
src/routes/about/: +page.svelte  tabs.meta.ts
src/routes/plugins/: +page.svelte
src/routes/recording-status/: +page.svelte
src/routes/settings/: +page.svelte  tabs.meta.ts
src/routes/toolbox/: +page.svelte
src/routes/tools/: +layout.svelte  +layout.ts  +page.svelte  tabs.meta.ts
(+13 files in other folders)
