[package]
name = "aether-flux"
version = "0.1.0"
description = "A workflow desktop application for commonly used tools"
authors = ["Alfred Clark"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be ocd ../nly an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aether_flux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "config-json5"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-system-fonts = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
hound = "3"
anyhow = "1.0.102"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["cuda"] }
realfft = "3.5.0"
tokenizers = "0.22.2"
jieba-rs = { version = "0.7", features = ["tfidf", "textrank"] }
pinyin = "0.11.0"
redb = "4.1.0"
tauri-plugin-dialog = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
